Resumable index build sorter files are not fsynced on shutdown

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0, v6.0, v5.0
    • Execution Team 2024-04-15
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Index builds spill to temporary data files via the external sorter. On clean shutdown, we persist state that allows us to resume the index build on restart. While the storage engine fsyncs its files to disk, it does not appear that we ever fsync the sorter files. It is therefore possible for us to lose data if the database operator performs a hard reset of a machine after a clean shutdown of the database.

      If we fail to persist anything correctly, we will detect that and fail with an assertion eventually before completing the index.

      This affects all versions back to 5.0.

            Assignee:
            Gregory Noma
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: