SERVER-86648 Sync sorter file on shutdown (#20648)

GitOrigin-RevId: 756bf5e8615a914e0bc5df3887d7322beae79e0f